# DataCortex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.codecortex/: constitution.md  cortex.yaml  graph.json  hotspots.md  overview.md  symbols.json  temporal.json
.codecortex/modules/: datacortex-cli.md  datacortex-core.md  datacortex-neural.md  datacortex-python.md
.codecortex/sessions/: 2026-03-24T16-42-06.md  2026-03-24T16-42-28.md  2026-03-24T17-27-33.md  2026-03-24T17-36-31.md  2026-03-24T18-45-07.md  2026-03-24T18-55-54.md  2026-03-24T19-07-27.md  2026-03-24T19-29-42.md  2026-03-24T19-30-41.md  2026-03-24T20-49-48.md  2026-03-24T21-33-14.md  2026-03-24T21-33-52.md  2026-03-24T21-37-40.md  2026-03-24T22-03-24.md  2026-03-24T22-25-21.md  2026-03-25T07-12-22.md  2026-03-25T07-34-02.md  2026-03-25T08-03-28.md  2026-03-25T08-29-06.md  2026-03-25T09-30-21.md  2026-03-25T10-24-06.md  2026-03-25T10-53-18.md  2026-03-25T11-05-16.md  2026-03-25T12-18-02.md  2026-03-25T12-18-27.md  2026-03-25T13-37-33.md  2026-03-25T13-37-54.md  2026-03-25T14-56-19.md  2026-03-25T15-44-29.md  2026-03-25T15-56-52.md  2026-03-25T16-07-08.md  2026-03-25T16-07-29.md  2026-03-25T16-10-18.md  2026-03-25T18-14-59.md  2026-03-25T18-31-58.md  2026-03-25T18-44-35.md  2026-03-25T19-16-49.md  2026-03-25T19-43-14.md  2026-03-25T19-43-29.md  2026-03-25T20-09-19.md  (+24 more)
benchmarks/: baseline.json  json_baseline.json
corpus/: test-api.json  test-code.rs  test-config.json  test-config.yaml  test-data.csv  test-data.xml  test-doc.md  test-metrics.prom  test-ndjson.ndjson
corpus/json-bench/: canada.json  uniform-10k.ndjson
crates/datacortex-cli/: Cargo.toml
crates/datacortex-cli/src/: main.rs
crates/datacortex-core/: Cargo.toml
crates/datacortex-core/examples/: dump_transform.rs  test_pipeline.rs  test_vdict.rs  trace_spacex.rs  validation_ab_test.rs
crates/datacortex-core/src/: codec.rs  dcx.rs  lib.rs
crates/datacortex-core/src/entropy/: arithmetic.rs  mod.rs
crates/datacortex-core/src/format/: csv.rs  json.rs  json_array.rs  log_transform.rs  logfmt.rs  lzp.rs  markdown.rs  mod.rs  ndjson.rs  prometheus.rs  schema.rs  transform.rs  typed_encoding.rs  value_dict.rs  wrt.rs  xml.rs  yaml.rs
crates/datacortex-core/src/mixer/: apm.rs  dual_mixer.rs  hierarchical_mixer.rs  isse.rs  logistic.rs  meta_mixer.rs  mod.rs  multi_set_mixer.rs
crates/datacortex-core/src/model/: cm_model.rs  dmc_model.rs  engine.rs  gru_model.rs  indirect_model.rs  json_model.rs  match_model.rs  mod.rs  neural_model.rs  order0.rs  ppm_model.rs  run_model.rs  sparse_model.rs  word_model.rs  xml_model.rs
crates/datacortex-core/src/ramanujan/: mod.rs
crates/datacortex-core/src/state/: context_map.rs  mod.rs  state_map.rs  state_table.rs
crates/datacortex-core/tests/: roundtrip.rs
crates/datacortex-neural/: Cargo.toml
crates/datacortex-neural/src/: lib.rs  llm.rs  meta_mixer.rs
crates/datacortex-python/: Cargo.toml  README.md  pyproject.toml
crates/datacortex-python/python/datacortex/: __init__.py
crates/datacortex-python/src/: lib.rs
scripts/: adversarial_test.py
