[workspace]
resolver = "2"
members = [
    "crates/datacortex-core",
    "crates/datacortex-cli",
    "crates/datacortex-neural",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/RushikeshMore/datacortex"

[workspace.dependencies]
datacortex-core = { path = "crates/datacortex-core" }
crc32fast = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
