[package]
name = "datacortex-cli"
description = "Best standalone JSON/NDJSON compressor. Beats zstd-19 and brotli-11 on every file. Just datacortex compress data.json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["compression", "json", "ndjson", "cli", "lossless"]
categories = ["command-line-utilities", "compression"]
readme = "../../README.md"

[[bin]]
name = "datacortex"
path = "src/main.rs"

[dependencies]
datacortex-core = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
neural = ["datacortex-core/neural"]
