[package]
name = "datacortex-core"
description = "Lossless text compression engine — format-aware preprocessing + bit-level context mixing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["compression", "lossless", "context-mixing", "json", "text"]
categories = ["compression", "encoding"]

[dependencies]
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
datacortex-neural = { path = "../datacortex-neural", optional = true }

[features]
default = []
neural = ["datacortex-neural/neural"]

[dev-dependencies]
