[package]
name = "datacortex-core"
description = "JSON/NDJSON-optimized lossless compression. Schema inference, columnar reorg, typed encoding. Beats zstd-19 by up to 113%"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["compression", "json", "ndjson", "lossless", "columnar"]
categories = ["compression", "encoding"]

[dependencies]
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }

[features]
default = []
# Neural feature requires building from source (datacortex-neural not on crates.io).
# Enable with: cargo build --features neural (from workspace root)
neural = []

[dev-dependencies]
