[package]
name = "datacortex-neural"
description = "DataCortex neural predictor — LLM byte-level prediction for Max mode (feature-gated)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
llama-cpp-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
neural = ["llama-cpp-2", "encoding_rs"]
